<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboard.welcome.WelcomeFragment">

    <ImageView
        android:id="@+id/iv_welcome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/mobile_life"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/OnboardTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        app:layout_constraintBottom_toTopOf="@id/btn_started"
        app:layout_constraintTop_toBottomOf="@id/iv_welcome"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/OnboardDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintVertical_bias="0.1" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_started"
        style="@style/OnboardButton"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:text="@string/welcome_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />
</androidx.constraintlayout.widget.ConstraintLayout>