<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.onboard.topic.FavouriteTopicsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:subtitle="@string/topics_text_description"
        app:subtitleTextAppearance="@style/textDescriptionStyle"
        app:title="@string/topics_text_title"
        app:titleTextAppearance="@style/textTitleStyle" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/item_news_topic" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/onboarding_next_btn"
        android:textSize="18sp"
        app:cornerRadius="12dp" />

</LinearLayout>