<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.search.SearchFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:subtitle="@string/search_text_description"
        app:subtitleTextAppearance="@style/textDescriptionStyle"
        app:title="@string/search_text_title"
        app:titleTextAppearance="@style/textTitleStyle" />


    <EditText
        android:id="@+id/edt_search"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_below="@id/toolbar"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/cut_corners_background"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="24dp"
        android:hint="@string/hint_text_search"
        android:imeOptions="actionDone"
        android:padding="16dp"
        android:singleLine="true" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/rv_search"
        android:layout_alignBottom="@id/rv_search"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edt_search"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:minHeight="200dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_news" />

</RelativeLayout>