<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.onboard.onboarding.OnboardingFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollIndicators="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:targetApi="m" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_pager"
        app:tabBackground="@drawable/selector_oboarding_tab"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/OnboardTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/OnboardDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/OnboardButton"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:text="@string/onboarding_next_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />
</androidx.constraintlayout.widget.ConstraintLayout>