<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:subtitle="@string/home_text_description"
            app:subtitleTextAppearance="@style/textDescriptionStyle"
            app:title="@string/home_text_title"
            app:titleTextAppearance="@style/textTitleStyle" />


        <TextView
            android:id="@+id/tv_search"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/cut_corners_background"
            android:drawablePadding="24dp"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:hint="@string/hint_text_search"
            android:padding="16dp"
            app:drawableStartCompat="@drawable/ic_search"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/tv_search"
            app:tabBackground="@drawable/selector_home_tab"
            app:tabIndicator="@null"
            app:tabMinWidth="100dp"
            app:tabMode="scrollable"
            app:tabPaddingEnd="20dp"
            app:tabPaddingStart="20dp"
            app:tabRippleColor="@android:color/transparent"
            app:tabSelectedTextColor="?colorOnPrimary"
            app:tabTextColor="?colorOutline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:minHeight="200dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab"
            tools:listitem="@layout/row_item_news" />

        <ProgressBar
            android:id="@+id/progress_bar_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/rv_category"
            android:layout_alignBottom="@id/rv_category"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/rv_category"
            app:layout_constraintEnd_toEndOf="@id/rv_category"
            app:layout_constraintStart_toStartOf="@id/rv_category"
            app:layout_constraintTop_toTopOf="@id/rv_category" />

        <TextView
            android:id="@+id/tv_recommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/home_text_recommended"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/rv_category" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:minHeight="100dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tv_recommendation"
            tools:listitem="@layout/item_news" />

        <ProgressBar
            android:id="@+id/progress_bar_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/rv_recommendation"
            app:layout_constraintEnd_toEndOf="@id/rv_recommendation"
            app:layout_constraintStart_toStartOf="@id/rv_recommendation"
            app:layout_constraintTop_toBottomOf="@id/tv_recommendation" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>